# Belousouv-Zhabotinsky

./: CMakeLists.txt  README.md  fragment_shader.glsl  main.cpp  pingpong.cpp  pingpong.h  shader_util.cpp  shader_util.h  test_shader.glsl  vertex_shader.glsl
